# experiments

./: .gitignore  LICENSE  README.md  pyproject.toml
cognos_measure/: __init__.py  composition.py  compression.py  gi.py  io.py  schemas.py  temporal.py
docs/: experiment-plan.md
experiments/ex1_compositional_coverage/: README.md  __init__.py  run.py
experiments/ex1_compositional_coverage/results/: ex1_results.json
experiments/ex3_1_evidence_ordering/: README.md  run.py
experiments/ex3_1_evidence_ordering/results/: ex3_1_results.json
experiments/ex6_2_gi_quality/: README.md  run.py
experiments/ex6_2_gi_quality/results/: ex6_2_results.json
experiments/ex6_3_git_gi_analysis/: README.md  __init__.py  run.py
experiments/ex6_3_git_gi_analysis/results/: ex6_3_results.json
experiments/ex6_7_cooperative_antagonism/: README.md  run.py
experiments/ex6_7_cooperative_antagonism/results/: ex6_7_results.json
experiments/ex6_8_cycle_design/: README.md  openai_runner.py  protocols.py  run.py
tests/: __init__.py  test_composition.py  test_compression.py  test_gi.py  test_monte_carlo.py  test_quality_proxies.py  test_temporal.py
